# coding-devops-sdk-py

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish_to_pypi.yml  sync_from_coding_devops.yml  sync_to_coding_devops.yml  sync_with_coding_devops.yml
coding_devops_sdk/: config.py  settings.toml
coding_devops_sdk/depot/: __init__.py  git.py
coding_devops_sdk/openapi/: __init__.py  client.py  depot.py  exceptions.py  project.py  team.py
docs/: README.md
docs/dev/: README.md  cli.md  service_hook.md
tests/: test_depot_git.py  test_openapi_client.py  test_openapi_depot.py  test_openapi_project.py  test_openapi_team.py
