[build-system]
requires = ["setuptools>=61", "setuptools.scm"]
build-backend = "setuptools.build_meta"

[project]
name = "coding-devops-sdk-py"
version = "0.1.0-alpha.2"
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = '>=3'
dependencies = [
    "gitpython",
    "dynaconf",
]
# dynamic = ["version"]
