# https://github.com/executablebooks/jupyter-book/blob/master/pyproject.toml
[build-system]
requires = ["setuptools>=61", "setuptools.scm"]
build-backend = "setuptools.build_meta"

[project]
name = "coding-devops-sdk-py"
version = "0.1.2"
authors = [
    {name = "QuantTide Inc.", email = "opensource@quanttide.com"}
]
description = "Python SDK for Coding DevOps"
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = '>=3'
dependencies = [
    "gitpython",
    "dynaconf",
]
# dynamic = ["version"]

[project.license]
file = "LICENSE"

[project.readme]
file = "README.md"
content-type = "text/markdown"